<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceCreation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textAddService"
            android:textColor="#000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editAddService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textServiceName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editAddHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textHourly"
                android:inputType="number|numberDecimal" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="newService"
            android:text="@string/btnAdd" />

        <TextView
            android:id="@+id/viewAdd"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/textEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEditService"
            android:textColor="#000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/editService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textServiceName"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="editService"
            android:text="@string/textFind" />

        <TextView
            android:id="@+id/viewEdit"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/textDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textDelete"
            android:textColor="#000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/editDeleteService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textServiceName"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="delete"
            android:text="@string/btnDelete" />

        <TextView
            android:id="@+id/viewDelete"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>